Fixed template layout issues, fixed side nav css issues

--- a/frontend/src/styles/components/_side-nav.scss
+++ b/frontend/src/styles/components/_side-nav.scss
@@ -12,8 +12,8 @@
         color: $main-light-color;
         align-items: center;
         gap: 2rem;
-
         position: fixed;
+        transform: translateX(3.3px);
 
         & > * {
             cursor: pointer;
